--- a/catalog-info2.yaml
+++ b/catalog-info2.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: service
 metadata:
-  name: artist-web
+  name: artist-web asdasdasdawd as dasd as ds
   description: The place to be, for great artists asdasd asd as dasd asd asfsdfagfdgfdg sdf gdsfg dfsh fdhdfshg fsd hsdfh dfsh dfs 
   tags:
     - java
-      javascript
-      html
-      almafa asfsdfgsgsd sd fsdf sd
+    - javascript
+    - html
+    - almafa asfsdfgsgsd sd fsdf sd
   links:
     - url: https://admin.example-org.com
       title: Admin Dashboard
