--- a/catalog-info2.yaml
+++ b/catalog-info2.yaml
@@ -1,16 +1,11 @@
 apiVersion: backstage.io/v1alpha1
-kind: service
+kind: component
 metadata:
   name: almafa
   description: The place to be, for great artists asdasd asd as dasd asd asfsdfagfdgfdg sdf gdsfg dfsh fdhdfshg fsd hsdfh dfsh dfs 
   tags:
     - java
     - javascript
-  links:
-    - url: https://admin.example-org.com
-      title: Admin Dashboard
-      icon: dashboard
-      type: admin-dashboard
 spec:
   type: component
   lifecycle: production
