--- a/catalog-info2.yaml
+++ b/catalog-info2.yaml
@@ -1,10 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: almafa
+  name: almafa asdfsad as das das das dasd 
   description: The place to be, for great artists asdasd asd as dasd asd asfsdfagfdgfdg sdf gdsfg dfsh fdhdfshg fsd hsdfh dfsh dfs 
   tags:
     - java
+    - javascript
 spec:
   type: service
   lifecycle: experimental
