--- a/catalog-info2.yaml
+++ b/catalog-info2.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: almafa asdfsad as das das das dasd 
+  name: almafa-asd-asd-asd-asd-asd-asdasd
   description: The place to be, for great artists asdasd asd as dasd asd asfsdfagfdgfdg sdf gdsfg dfsh fdhdfshg fsd hsdfh dfsh dfs 
   tags:
     - java
