--- a/catalog-info6-user.yaml
+++ b/catalog-info6-user.yaml
@@ -1,10 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: jdoe
+  name: guest
 spec:
   profile:
-    displayName: Jenny Doe
-    email: jenny-doe@example.com
-    picture: https://example.com/staff/jenny-with-party-hat.jpeg
-  memberOf: [team-b, employees]
+    displayName: Guest
+    email: guest@example.com
