--- a/test-gitlab.yaml
+++ b/test-gitlab.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: 'gitlab-test'
     annotations:
-    'gitlab.com/project-id': '168033'
+    project-id: '168033'
 spec:
   type: service
   lifecycle: experimental
